--- a/dev/sass/meta.scss
+++ b/dev/sass/meta.scss
@@ -1,21 +1,93 @@
 @import "variables";
 @import "header-bootstrap";
+@import "../libs/font-awesome/scss/font-awesome.scss";
 
 body{
 	padding: 0;
 	margin: 0;
-	overflow-x: hidden;
 }
+.animate{position: absolute;}
 .header{
-	position: absolute;
-	min-height: 15vh;
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	text-transform: uppercase;
-	&-fon{
-		@include fon();
+	background-color: #09f;
+	z-index: 10;
+	&-nav{
+		padding: 10px 0;
+		margin-bottom: 0;
+		list-style: none;
+	}
+	&-item{
+		display: table-cell;
+		width: 1%;
+		text-align: center;
+	}
+	&-href{
+		color: #fff;
+		text-decoration: none;
+		&:hover, &focus{
+			color: #ccc;
+			text-decoration: none;
+		}
+	}
+}
+.trigger{
+	position: relative;
+    display: block;
+    width: 40px;
+    float: right;
+    padding: 2px;
+    overflow: hidden;
+    white-space: nowrap;
+    color: transparent;
+    z-index: 3;
+	&-bar{
+		position: relative;
+	    right: 10px;
+	    -webkit-transition: background 0.3s 0.3s;
+	    -moz-transition: background 0.3s 0.3s;
+	    transition: background 0.3s 0.3s;
+	    display: inline-block;
+	    height: 3px;
+	    width: 24px;
+	    background: #fff;
+		&:before, &:after{
+			content: '';
+		    -webkit-transform: translateZ(0);
+		    -moz-transform: translateZ(0);
+		    -ms-transform: translateZ(0);
+		    -o-transform: translateZ(0);
+		    transform: translateZ(0);
+		    -webkit-backface-visibility: hidden;
+		    backface-visibility: hidden;
+		    right: 0;
+		    -webkit-transform-origin: 0% 50%;
+		    -moz-transform-origin: 0% 50%;
+		    -ms-transform-origin: 0% 50%;
+		    -o-transform-origin: 0% 50%;
+		    transform-origin: 0% 50%;
+		    -webkit-transition: -webkit-transform 0.3s 0.3s;
+		    -moz-transition: -moz-transform 0.3s 0.3s;
+		    transition: transform 0.3s 0.3s;
+		    position: absolute;
+		    display: inline-block;
+		    height: 3px;
+		    width: 24px;
+		    background: #fff;
+		}
+		&:before{
+			top: -6px;
+		}
+		&:after{
+			top: 6px;
+		}
 	}
 }
 .home{
+	overflow-x: hidden;
 	position: relative;
 	min-height: 100vh;
 	width: 100%;
@@ -25,19 +97,20 @@ body{
 	}
 	&-block{
 		position: relative;
-		top:20vh;
+		top:40vh;
 		text-align: center;
 	}
 	&-btn{
 		background-color: #fc0;
 		display: inline-block;
-		padding: 5px;
+		padding: 10px 40px;
+		font-weight: 600;
 	}
 	&-href{
 		color: #fff;
 		text-decoration: none;
 		&:hover, &:focus{
-			color: #aaa;
+			color: #888;
 			text-decoration: none;			
 		}
 	}
