--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -2,36 +2,127 @@
 @import "bootstrap";
 
 .tarif{
+	overflow-x: hidden;
 	position: relative;
-	overflow-y: hidden;
+	overflow: hidden;
 	min-height: 85vh;
 	width: 100%;
 	&-fon{
+		width: 100%;
+		height: auto;
+		position: absolute;
+		z-index: -1;
+	}
+	&-block{
+		position: relative;
+		min-height: 50%;
+		width: 100%;
+	}
+	&-img{
 		@include fon();
+	}
+	&-bblue{
+		padding-top: 100px;
+		color: #fff;
+		width: 300px;
+		margin: auto;
+	}
+	&-h2{
+		color:#000;
+	}
+	&-btn{
+		padding: 60px 100px;
+		background: url('/img/homepage/tarif-btn.png') no-repeat transparent;
+		background-size: contain;
+	}
+	&-href{
+		color: #fff;
+		text-decoration: none;
+		text-transform: uppercase;
+		&:hover,&:focus{
+			color: #888;
+			text-decoration: none;
+		}
 	}
 }
 .premium{
+	overflow: hidden;
 	position: relative;
-	overflow-y: hidden;
 	min-height: 85vh;
 	width: 100%;
 	&-fon{
 		@include fon();
 	}
+	&-block{
+		text-align: center;
+		padding-top: 50px;
+	}
+	&-img{
+    	min-height: 130px;
+    }
+    &-text{
+
+    }
+}
+.slide{
+	overflow-x: hidden;
+	position: relative;
+	top:50px;
+	width: 80%;
+	margin: auto;
+	height: 50%;
+	border: 2px solid #888;
 }
 .about{
+	overflow-x: hidden;
 	position: relative;
-	overflow-y: hidden;
 	min-height: 85vh;
+	color: #fff;
 	width: 100%;
 	&-fon{
 		@include fon();
+	}
+	&-h2{
+		padding-top: 20vh;
+		text-transform: uppercase;
+	}
+	&-text{
+		width: 50%;
+		margin:auto;
 	}
 }
 .footer{
 	min-height: 15vh;
 	width: 100%;
+	background-color: #000;
+	text-transform: uppercase;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #fff;
+	text-align: center;
+	font-size: 20px;
 	&-fon{
 		@include fon();
 	}
+	&-href{
+		color: #fff;
+		text-decoration: none;
+		&:hover, &:focus{
+			color: #ccc;
+			text-decoration: none;
+		}
+	}
+	&-left{
+		padding-top: 30px;
+	}
+	&-center{
+		padding-top: 15px;
+		font-size: 14px;
+	}
+	&-right{
+		padding-top: 30px;
+		.footer-href{
+			padding-right: 10px;
+		}
+    }
 }
